# web-technologies-base

./: .gitignore  README.md  database.py  dependencies.py  install_dependencies.ps1  install_poetry.ps1  main.py  models.py  pyproject.toml  pyproject.toml_old  requirements.txt  routes.py  start_app.ps1  test.py  uninstall_dependencies.ps1
src/: config.py  main.py  models.py  routes.py  schemas.py
src/static/: script.js  style.css
src/templates/: base.html  details.html  items.html  profile.html  tags.html  users.html
