[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.39",
    "pydantic>=2.10.6",
    "jinja2>=3.1.6",
    "alembic>=1.15.1",
    "python-multipart>=0.0.20"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
